[package]
name = "riversdb"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossbeam = "0.8.2"
tokio = "1.23.0"
chrono = "0.4.23"
thiserror = "1.0.38"
bytes = "1.3.0"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10"

[dev-dependencies]

